🐛 Fixed social icons gap

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -78,7 +78,6 @@ body {
 
 .social-links {
     display: flex;
-    gap: .25rem;
     flex-wrap: wrap;
     justify-content: center;
 
